wind-turbine-anomlaly-detection: mqtt helm fix for csv file path
Changes:
 templates/mqtt-publisher.yaml - Fixed the inout csv file path

Signed-off-by: Pooja Kumbharkar <pooja.kumbharkar@intel.com>

--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/templates/mqtt-publisher.yaml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/templates/mqtt-publisher.yaml
@@ -39,7 +39,7 @@ spec:
               - ALL
           seccompProfile:
             type: RuntimeDefault
-        command: ["python3", "-u", "publisher.py", "--csv", "/windturbine/windturbine_data.csv"]
+        command: ["python3", "-u", "publisher.py", "--csv", "/windturbine_data.csv"]
         env:
         - name: HOST_IP
           value: "ia-mqtt-broker"
