windturbine_anomaly_detection: Updated config.json and helm template
Changes:
 1.config.json - Updated the config structure
 2.helm - Added rest api port 5000

Signed-off-by: Pooja Kumbharkar <pooja.kumbharkar@intel.com>

--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/docker-compose.yml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/docker-compose.yml
@@ -113,6 +113,8 @@ services:
       MODEL_REGISTRY_URL: http://model-registry:8111
     networks:
     - timeseries_network
+    ports:
+    - 5000:5000
     volumes:
     - "vol_temp_time_series_analytics_microservice:/tmp/"
     - ./time_series_analytics_microservice/udfs/:/tmp/windturbine_anomaly_detector/udfs/
