--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/templates/time-series-analytics-microservice.yaml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/templates/time-series-analytics-microservice.yaml
@@ -10,9 +10,14 @@ metadata:
   name: {{ .Values.config.time_series_analytics_microservice.name }}
   namespace: {{ .Values.namespace }}
 spec:
+  type: NodePort
   ports:
   - port: {{ .Values.config.time_series_analytics_microservice.kapacitor_port }}
     name: kapacitor-port
+  - name: rest-api-port
+    port: {{ .Values.config.time_series_analytics_microservice_rest_api.rest_api_port }}
+    targetPort: {{ .Values.config.time_series_analytics_microservice_rest_api.int.port }}
+    nodePort: {{ .Values.config.time_series_analytics_microservice_rest_api.ext.port }}
   selector:
     app: time-series-analytics-microservice
 ---
