windturbine_anomaly_detection: Published the opcua server port
Changes:
  1.docker-compose.yml - Published the opcua server port
  2.helm - Published the opcua server port
  3.docs- Updated docs for the port number

Signed-off-by: Pooja Kumbharkar <pooja.kumbharkar@intel.com>

--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/docker-compose.yml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/docker-compose.yml
@@ -209,6 +209,8 @@ services:
       interval: 5m
     networks:
     - timeseries_network
+    ports:
+    - ${OPCUA_SERVER_PORT}:4840
     volumes:
     - ./simulator/simulation_data/windturbine_data.csv:/app/windturbine_data.csv
 
