--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/values.yaml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/values.yaml
@@ -104,7 +104,9 @@ config:
   opcuaserver:
     name: ia-opcua-server
     int:
-      pub_port: 4840
+      port: 4840
+    ext:
+      port: 30003
   mqttpublisher:
       name: mqttpublisher
   model_registry:
