--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/templates/opcua.yaml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/templates/opcua.yaml
@@ -11,11 +11,14 @@ metadata:
   name: {{ .Values.config.opcuaserver.name }}
   namespace: {{ .Values.namespace }}
 spec:
+  type: NodePort
   selector:
     app: ia-opcua-server
   ports:
     - name: opcua-port
-      port: {{ .Values.config.opcuaserver.int.pub_port }}
+      port: {{ .Values.config.opcuaserver.int.port }}
+      targetPort: {{ .Values.config.opcuaserver.int.port }}
+      nodePort: {{ .Values.config.opcuaserver.ext.port }}
 ---
 
 apiVersion: apps/v1
