windturbine_anomaly_detection: Added loop data variable for simulator
Changes:
 1.docker-compose.yml - Added loop env var for mqtt publisher and opcua
   server
 2.helm - Added loop env var for mqtt publisher and opcua
   server
 3.simulator - Loop env variable changes to loop data.

Signed-off-by: Pooja Kumbharkar <pooja.kumbharkar@intel.com>

--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/templates/opcua.yaml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/templates/opcua.yaml
@@ -63,6 +63,8 @@ spec:
           value: "time-series-analytics-microservice"
         - name: TS_MS_PORT
           value: '{{ .Values.config.time_series_analytics_microservice.kapacitor_port }}'
+        - name: LOOP
+          value: "true"
         volumeMounts:
         {{ if eq .Values.env.SECURE_MODE true }}
         - name: certs
