windturbine_anomaly_detection: Updated docs for loop
Changes:
 1.docs- Added note for CONTINUOUS_SIMULATOR_INGESTION env var.
 2.helm - Added env to values.yaml
 3..env - Added the env var
 4.simulator- Changes to rename env var

Signed-off-by: Pooja Kumbharkar <pooja.kumbharkar@intel.com>

--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/docker-compose.yml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/docker-compose.yml
@@ -201,7 +201,7 @@ services:
       NO_PROXY: "ia-time-series-analytics-microservice,${no_proxy}"
       TS_MS_SERVER: "ia-time-series-analytics-microservice"
       TS_MS_PORT: ${KAPACITOR_PORT}
-      LOOP: "true"
+      CONTINUOUS_SIMULATOR_INGESTION: ${CONTINUOUS_SIMULATOR_INGESTION}
     restart: unless-stopped
     security_opt:
     - no-new-privileges
@@ -242,7 +242,7 @@ services:
       NO_PROXY: "ia-mqtt-broker,ia-time-series-analytics-microservice,${no_proxy}"
       TS_MS_SERVER: "ia-time-series-analytics-microservice"
       TS_MS_PORT: ${KAPACITOR_PORT}
-      LOOP: "true"
+      CONTINUOUS_SIMULATOR_INGESTION: ${CONTINUOUS_SIMULATOR_INGESTION}
     networks:
     - timeseries_network
     command: ["--csv", "/windturbine_data.csv"]
