--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/values.yaml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/helm/values.yaml
@@ -34,6 +34,7 @@ env:
   HTTPS_PROXY: 
   # SECURE_MODE environment variable should not be changed as it may cause unexpected behavior or system failure.
   SECURE_MODE: false 
+  CONTINUOUS_SIMULATOR_INGESTION: true
   TELEGRAF_INPUT_PLUGIN: opcua
   TIMESERIES_USER_NAME: timeseries_user
   TIMESERIES_UID: 1999
