--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/.env
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/.env
@@ -32,6 +32,7 @@ INFLUXDB_PASSWORD=
 VISUALIZER_GRAFANA_USER=
 VISUALIZER_GRAFANA_PASSWORD=
 
+CONTINUOUS_SIMULATOR_INGESTION=true
 
 GRAFANA_PORT=3000
 OPCUA_SERVER_PORT=30003
