--- a/manufacturing-ai-suite/wind-turbine-anomaly-detection/docker-compose.yml
+++ b/manufacturing-ai-suite/wind-turbine-anomaly-detection/docker-compose.yml
@@ -88,6 +88,7 @@ services:
       - ia-mqtt-broker
     security_opt:
     - no-new-privileges
+    privileged: true
     read_only: true
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:9092/kapacitor/v1/ping || exit 1"]
@@ -121,6 +122,23 @@ services:
     - ./time_series_analytics_microservice/tick_scripts/:/tmp/windturbine_anomaly_detector/tick_scripts/
     - ./time_series_analytics_microservice/config.json:/app/config.json
     - ./time_series_analytics_microservice/models/:/tmp/windturbine_anomaly_detector/models/
+    - /dev/dri:/dev/dri
+    - "/run/udev:/run/udev:ro"
+    device_cgroup_rules:
+    # Default run - device-cgroup-rule='c 189:* rmw'
+    # Selective rules can be applied for deployment
+    - 'c 189:* rmw'
+    - 'c 209:* rmw'
+    - 'a 189:* rwm'
+    devices:
+      # Following devices under /dev filesystem will be needed based on usecase
+      # dri - GPU
+    - "/dev/dri:/dev/dri"
+    group_add:
+    # render group ID for ubuntu 20.04 host OS
+    - "109"
+    # render group ID for ubuntu 22.04 host OS
+    - "110"
 
   ia-grafana:
     image: grafana/grafana-oss:12.0.0-ubuntu
